<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/learnlogo" android:id="@+id/imageView2"
                android:layout_marginTop="151dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:paddingStart="115dp"
                app:layout_constraintEnd_toEndOf="parent" android:paddingEnd="115dp"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_box_colour"
                android:id="@+id/email"
                android:ems="10"
                android:textAppearance="@style/txtGray"
                android:hint="@string/email_addre"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:lineSpacingExtra="6sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/text_box_colour"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/verificationCode"
                android:hint="@string/password"
                android:textAppearance="@style/txtGray"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
                app:layout_constraintEnd_toEndOf="parent"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signin"
                android:background="@drawable/bg"
                android:text="@string/sign_in"
                android:textAppearance="@style/btnWhite"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verificationCode"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                android:layout_marginBottom="16dp">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtSignIn"
                    android:text="@string/fgt_pswd"
                    android:textAppearance="@style/txtGray"/>

            <TextView
                    android:id="@+id/toFgtPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_here"
                    android:textAppearance="@style/txtBlue"
                    android:layout_marginStart="2dp"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" android:id="@+id/linearLayout" android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dontAcc"
                    android:text="@string/fstTime"
                    android:textAppearance="@style/txtGray"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toSignUp"
                    android:text="@string/sign_up"
                    android:textAppearance="@style/txtBlue"
                    android:layout_marginStart="2dp"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>