<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="135dp" app:srcCompat="@drawable/learnlogo"
                android:id="@+id/imageView3"
                app:layout_constraintStart_toStartOf="parent" android:paddingStart="115dp"
                app:layout_constraintEnd_toEndOf="parent" android:paddingEnd="115dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="151dp"/>

        <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/text_box_colour"
                android:hint="@string/first_name"
                android:textAppearance="@style/txtGray"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:background="@drawable/text_box_colour"
                android:hint="@string/last_name"
                android:textAppearance="@style/txtGray"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:id="@+id/lastname"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/firstname"/>
        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:background="@drawable/text_box_colour"
                android:hint="@string/email_addre"
                android:textAppearance="@style/txtGray"
                android:ems="10"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lastname"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextBtn"
                android:background="@drawable/bg"
                android:text="@string/next"
                android:textAppearance="@style/btnWhite"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email"
        />

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/linearLayout3"
                android:gravity="center" android:layout_marginBottom="35dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtVsignIn"
                    android:text="@string/vsign_in"
                    android:textAppearance="@style/txtGray"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toSignIn"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/txtBlue"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginBottom="16dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rtSignIn"
                    android:text="@string/rtn_user"
                    android:textAppearance="@style/txtGray"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toSignIn2"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/txtBlue"
                    android:layout_marginStart="2dp"/>
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>